caisse/admin/style.css
.pos {
	display: grid;
	grid-template-columns: .5fr .5fr;
	grid-column-gap: 1rem;
}

.pos header {
	margin-bottom: 1rem;
}

.pos header .title {
	display: flex;
	justify-content: space-between;
}

.pos header .id {
	color: #666;
	font-weight: normal;
	vertical-align: middle;
	display: inline-flex;
	align-items: center;
	margin-right: auto;
}

.pos header .actions {
	display: flex;
	justify-content: space-between;
	gap: .7rem;
}

.pos header .actions a, .pos header .actions button {
	margin: 0;
}

.pos .products {
	text-align: center;
}

.pos .products section button {
    background: #eee;
    border: .2rem solid #ddd;
    border-color: hsl(var(--cat-hue), 40%, 75%);
	border-radius: .5rem;
	padding: .5rem;
	margin: .3rem;
	flex: 1;
	transition: background .2s;
	min-width: 9rem !important;
}

.pos .products section button h4 {
	color: #666;
	font-size: 1em;
	margin: .5em 0;
}

.pos .products section  button h3 {
	font-size: 1.1em;
}

.pos .products section button:hover {
	background: #fee;
	border-color: #fcc;
}

.pos .products section div {
	display: flex;
	flex-grow: 1;
	flex-wrap: wrap;
}

.pos .products h2 {
	opacity: 0.4;
	margin: 1rem 0;
}

.pos .products header input[name="q"] {
	font-size: 2rem;
	min-width: 5em;
	width: calc(100% - 1em);
}

.pos .products header {
	display: flex;
}

.pos .products header button {
	font-size: 1.5em;
	border: none;
}

.pos .items table td, .pos .items table th {
	padding: .5em;
}

@media screen and (max-width:600px) {
	.items table.list tbody tr {
		display: flex;
		flex-wrap: wrap;
		align-items: center;
		justify-content: space-between;
	}
	.items table.list tbody th {
		flex-grow: 1;
		width: 100% !important;
		text-align: left !important;
	}
	.items table.list thead {
		display: none;
	}
	.items table.list tfoot tr {
		display: flex;
	}
}

.pos .items i {
	font-weight: normal;
	font-size: 2rem;
	font-style: normal;
	color: darkred;
	line-height: 1rem;
}

.pos .list thead td {
	text-align: center;
}

.pos .products ul {
	font-size: .8em;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	margin-top: .5em;
}

.pos .products ul a {
	text-decoration: none;
	color: #333;
	padding: .2em .4em;
	border-radius: .3em;
	margin: .3em;
	display: inline-block;
	transition: background .2s, color .2s;
	background: #ccc;
	background: hsl(var(--cat-hue), 40%, 85%);
	border: 1px solid #ccc;
	box-shadow: 0px 0px 5px #ccc;
}

.pos .products ul .current a {
	color: #fff;
	background: hsl(var(--cat-hue), 30%, 55%);
}

.pos .products ul .current a[data-cat=""] {
	background: #666;
}

.pos .products ul a:hover {
	text-decoration: underline;
	background: hsl(var(--cat-hue), 20%, 80%);
	border-color: #fff;
	color: darkred;
	box-shadow: 0px 0px 5px #999;
}

.list small.cat {
	font-size: 7pt;
	font-weight: normal;
	color: #666;
	display: block;
}

.tabs .pos-tabs {
	display: flex;
	align-items: end;
	justify-content: space-between;
	margin-bottom: .8em;
}

.tabs .pos-tabs ul {
	padding: .5rem;
	margin: 0;
	border: none;
	max-height: 4.2em;
	overflow: hidden;
	position: relative;
	justify-content: start;
}

.tabs .pos-tabs .plus {
	margin-top: 1em;
}

.tabs .pos-tabs.open ul {
	overflow: unset;
	max-height: unset;
}

.tabs .pos-tabs li {
	padding: .1rem;
	margin: 0;
}

.tabs .pos-tabs li a {
	margin: 0;
}

.tabs .pos-tabs li:first-child::before, .tabs .pos-tabs li:last-child::after {
	display: none;
}

.tabs .pos-tabs li.closed a {
	text-decoration: line-through;
	opacity: 0.5;
}


.pos .items th button {
	font-size: 10px;
	padding: .2em .3em;
	border-width: 1px;
}

.user_rename_list th {
	font-weight: bold;
}

.user_rename_list td.subscriptions {
	font-size: .9em;
	color: #666;
}

@media screen and (max-width: 800px) {
	.pos {
		display: block;
	}

}

